# GroundsBot

./: .gitignore  Parts.md
CAD/: GroundsBot.20260706-190535.FCBak  GroundsBot.FCStd
grounds_bot_workspace/description_package/: CMakeLists.txt  package.xml
grounds_bot_workspace/description_package/launch/: display.launch.xml
grounds_bot_workspace/description_package/rviz/: TestingEnvironment.rviz
grounds_bot_workspace/description_package/urdf/: GroundsBot.urdf  GroundsBot.urdf.xacro  inertia_properties.xacro
grounds_bot_workspace/install/: local_setup.sh  setup.sh
grounds_bot_workspace/log/: latest_build
grounds_bot_workspace/src/description_package/: package.xml
grounds_bot_workspace/src/description_package/launch/: display.launch.xml
grounds_bot_workspace/src/description_package/urdf/: GroundsBot.urdf.xacro  grounds_bot_gazebo.xacro
grounds_bot_workspace/src/grounds_bot_bringup_package/: CMakeLists.txt  package.xml
grounds_bot_workspace/src/grounds_bot_bringup_package/config/: gazebo_bridge.yaml
grounds_bot_workspace/src/grounds_bot_bringup_package/launch/: grounds_bot.launch.xml
grounds_bot_workspace/src/grounds_bot_control/: CMakeLists.txt  package.xml
grounds_bot_workspace/src/grounds_bot_control/src/: wheel_controler_node.cpp
